ligolang/src/test/contracts/negative/parametric_types1.religo
type fail_big_map = map(bool);